[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "csv-analytics-mcp"
version = "1.0.0"
description = "MCP server for csv analytics. Features load csv, query data, describe columns. From MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0", "pandas>=1.5.0", ]
keywords = ["mcp", "ai", "meok", "csv", "analytics", "mcp/"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/csv-analytics-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
csv_analytics_mcp = "server:main"
